# ProMBA

./: .gitignore  .gitmodules  2variable_booltable.txt  3variable_booltable.txt  DSynth.opam  Dockerfile  ProMBA.opam  README  abs_synth.sh  build.sh  duet.sh  dune-project  eusolver.sh  mbasolver_linear  mbasolver_poly  no.rules  result.txt  run_test  simba  simbas.sh  synth.sh  transform.sh
_build/: .db  .digest-db  log
_build/default/: DSynth.dune-package  DSynth.install
_build/default/.dune/: configurator  configurator.v2
_build/default/src/: MBALexer.ml  MBALexer.mll  MBAParser.ml  MBAParser.mli  MBAParser.mly  SygusLexer.ml  SygusLexer.mll  SygusParser.ml  SygusParser.mli  SygusParser.mly  cilHelper.ml  expr.ml  main.ml  options.ml  utils.ml
_build/default/src/.main.eobjs/: MBALexer.ml.d  MBAParser.ml.d  MBAParser.mli.d  SygusLexer.ml.d  SygusParser.ml.d  SygusParser.mli.d  cilHelper.ml.d  dune__exe.ml-gen  dune__exe__Expr.impl.all-deps  dune__exe__MBALexer.impl.all-deps  dune__exe__Main.impl.all-deps  dune__exe__SygusLexer.impl.all-deps  dune__exe__SygusParser.impl.all-deps  dune__exe__Utils.impl.all-deps  expr.ml.d  main.ml.d  main.mli.d  options.ml.d  utils.ml.d
backup/: floki.t.c  generated_expr.txt.obfuscated.c
loki_benchmark/: floki.c
loki_benchmark/backup/: floki.c  floki.txt
mbablast_benchmark/: dataset2.c  dataset3.c  dataset4.c
mbablast_benchmark/backup/: dataset4.c
mbasolve_benchmark/: dataset_nonpoly.c
mbasolve_benchmark/backup/: dataset_nonpoly.c  dataset_nonpoly.txt  dataset_poly.c
mixed_benchmark/: dataset_mixed.c
mixed_benchmark/backup/: dataset_mixed.c  mixed.txt
qsynth-artifacts/: README.md
qsynth-artifacts/datasets/custom_EA/: ground_truth.json  obfuscated  original.c  run_tigress.sh
qsynth-artifacts/datasets/custom_EA_ED/: original.c  run_tigress.sh
qsynth-artifacts/datasets/custom_VR_EA/: ground_truth.json  obfuscated  run_tigress.sh
qsynth-artifacts/datasets/syntia/: ground_truth.json  obfuscated  obfuscated.c  original.c  run_tigress.sh
qsynth_benchmark/: qsynth.c
qsynth_benchmark/backup/: qsynth.txt
src/: MBALexer.mll  MBAParser.mly  SimplifyLexer.mll  SimplifyParser.mly  SygusLexer.mll  SygusParser.mly  cilHelper.ml  dune  expr.ml  floki.ml  main.ml  mbablast.ml  options.ml  utils.ml
(+40 files in other folders)
