(executable
 (public_name ProMBA)
 (libraries yojson batteries cil lacaml integers bitvec)
 (name main)
 (promote
  (until-clean)
  (into ../))
)

(ocamllex MBALexer)
(ocamlyacc MBAParser)
(ocamllex SygusLexer)
(ocamlyacc SygusParser)
(ocamllex SimplifyLexer)
(ocamlyacc SimplifyParser)


(env
 (dev
  (flags (:standard -warn-error -A))
 )
)
